# dmi-duplicate-state-checker

./: CHANGELOG.md  Cargo.toml  README.md  action.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
test_files/: correct.dmi  duplicates.dmi
